# flightpath_packaging

./: .gitignore  README.md  copy_msixes.bat  create.bat  create_windows_universal.bat  create_windows_universal_test.bat  pull_artifacts.py  pyproject.toml  sign_windows_msixes.bat  sign_windows_universal_bundle.bat
.github/workflows/: build-macos.yml  build-msix.yml
brew/: build_app.sh
brew/icons/: icon.icns
macos/: .bash_profile  README.md  calculate_metadata.sh  cleaner.sh  codesign_app_for_store.sh  create_release_candidate_app_store.sh  create_release_candidate_app_store_test.sh  index.html.1  itmsp.sh  pkg.sh  pull_artifacts.py  transport.sh  transport_verify.sh
macos/assets/: entitlements.plist
msix/manifest/: AppxManifest.xml
packaging/: build_app.sh  build_number.py  codesign_app_for_dmg.sh  codesign_app_for_store.sh  create_release_candidate_app_store.sh  create_release_candidate_signed_dmg.sh  create_windows_release.bat  create_windows_release_test.bat  create_windows_release_test.ps1  create_windows_release_universal.bat  dmg.sh  env.sh  itmsp.sh  notarize-dmg.sh  transport.sh  transport_verify.sh
packaging/assets/: 150x150.xcf  44x44.xcf  AppxManifest.xml  build.py  convert_icon.py  def.plist  (+4 more)
scripts/: local-build.ps1
windows/: FlightPath-Data-windows-new.spec  FlightPath-Data-windows.spec  README.md  build.bat  create_cert.ps1  create_windows_release.bat  create_windows_release.ps1  create_windows_release_test.bat  set_dark_mode.bat
winget/: README.md  build.bat  create_windows_release.bat  notes.txt  sign.bat  winget_create.bat
(+21 files in other folders)
